unpackaged/main/default/objects/WAMessage__c/WAMessage__c.object-meta.xml
<CustomObject>
    <label>WAMessage</label>
    <nameField>
        <displayFormat>WAM-{0000}</displayFormat>
        <label>WAMessage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>