unpackaged/main/default/objects/WAMessage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WAMessages</relationshipLabel>
    <relationshipName>WAMessages</relationshipName>
    <type>Lookup</type>
</CustomField>