unpackaged/main/default/objects/WAMessage__c/fields/isIncoming__c.field-meta.xml
<CustomField>
    <fullName>isIncoming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIncoming</label>
    <type>Checkbox</type>
</CustomField>