unpackaged/main/default/objects/WAMessage__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>whatsapp number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>