unpackaged/main/default/objects/WAMessage__c/fields/Read_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Read_Recipient__c</fullName>
    <inlineHelpText>show current status of message.</inlineHelpText>
    <label>Read Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>read</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>